improve update methods, and add empty list when the query return comes empty, in SUpplierService